ATLAS-1511: location readme and cleanup